AG-8094 - Fix code/snippet white space bug. Make all snipets consistent font size

--- a/grid-packages/ag-grid-docs/documentation/src/design-system/components/_code.scss
+++ b/grid-packages/ag-grid-docs/documentation/src/design-system/components/_code.scss
@@ -41,6 +41,7 @@ pre.code {
         padding: 0;
         background: none;
         border: none;
+        white-space: pre;
     }
 
     .token.comment,
